--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://RimuruSama376.github.io/food-ordering-app-reactjs",
+  "homepage": "https://rimurusama376.github.io/food-order-frontend",
   "name": "food-ordering-app",
   "version": "0.1.0",
   "private": true,
